# tokamak

./: .gitignore  .pre-commit-config.yaml  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: README.md  benchmark_attention.py  benchmark_kv_memory.py  benchmark_latency.py  benchmark_quality.py  benchmark_speculative.py  benchmark_streaming.py  benchmark_throughput.py  benchmark_vllm.py  workload.py
docs/: ROADMAP.md
docs/articles/: 002-paged-kv-cache.md  003-continuous-batching.md  004-triton-paged-attention.md  005-speculative-decoding.md  006-vllm-gap-analysis.md  007-attention-policies.md
docs/design/: 001-engine-core.md  002-paged-kv-cache.md  003-continuous-batching.md  004-triton-paged-attention.md  005-speculative-decoding.md  006-vllm-gap-analysis.md  007-attention-policies.md
examples/: basic_generation.py
src/tokamak/: __init__.py  config.py  sampling_params.py
src/tokamak/engine/: __init__.py  llm.py  outputs.py  scheduler.py  sequence.py  speculative.py
src/tokamak/kernels/: __init__.py  paged_attention.py
src/tokamak/memory/: __init__.py  block_manager.py  paged_cache.py
src/tokamak/model/: __init__.py  attention_policy.py  kv_cache.py  layers.py  loader.py  step_context.py  transformer.py
src/tokamak/sampling/: __init__.py  sampler.py
src/tokamak/speculative/: __init__.py  rejection.py
tests/integration/: test_generate_e2e.py  test_hf_parity.py
tests/unit/: test_attention_policy.py  test_block_manager.py  test_config.py  test_layers.py  test_model.py  test_paged_attention_kernel.py  test_paged_cache.py  test_rejection.py  test_sampler.py  test_sampling_params.py  test_scheduler.py  test_speculative_runner.py  test_step_context.py
