[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tokamak-llm"
version = "0.1.0.dev0"
description = "A minimal LLM inference engine built from scratch in PyTorch: KV caching, paged attention, continuous batching, and speculative decoding."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Wei-Chun", email = "weijunintw@gmail.com" }]
keywords = [
    "llm",
    "inference",
    "pytorch",
    "kv-cache",
    "paged-attention",
    "continuous-batching",
    "speculative-decoding",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.7",
    "transformers>=4.51",
    "safetensors>=0.4.5",
    "huggingface-hub>=0.30",
    "tqdm>=4.66",
]

[project.urls]
Repository = "https://github.com/WeichunK/tokamak"
Issues = "https://github.com/WeichunK/tokamak/issues"

[dependency-groups]
dev = [
    "ruff>=0.11",
    "mypy>=1.15",
    "pytest>=8.3",
    "pre-commit>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tokamak"]

# torch wheel selection: CUDA 12.6 wheels on Windows (local development GPU),
# CPU wheels on Linux (CI). Benchmark environments manage their own torch build.
[tool.uv.sources]
torch = [
    { index = "pytorch-cu126", marker = "sys_platform == 'win32'" },
    { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
    "D",   # pydocstyle
]
ignore = [
    "D105", # missing docstring in magic method
    "D107", # missing docstring in __init__ (documented at class level)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]
"examples/**" = ["D"]
"benchmarks/**" = ["D"]

# python_version is left at the interpreter default: numpy's stubs use PEP 695
# syntax that mypy rejects under a 3.11 target. 3.11 compatibility is covered by
# the CI test matrix instead.
[tool.mypy]
files = ["src"]
strict = true
pretty = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["transformers.*", "safetensors.*", "tqdm.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "gpu: requires a CUDA-capable GPU",
    "model: downloads reference model weights from the Hugging Face Hub",
]
